--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
 
         <div class="team">
           <div class="teamPhoto reveal">
-            <img src="team.jpg" alt="Troya Team — командное фото" onerror="this.src=placeholderWide()" />
+            <img src="team.png" alt="Troya Team — командное фото" onerror="this.src=placeholderWide()" />
           </div>
 
           <div class="quote reveal">
@@ -931,18 +931,12 @@
               </div>
 
               <div style="height:10px"></div>
-              <div class="mini">
-                Подсказка: если хочешь кнопку “Написать”, сделай ссылку на Telegram/Discord invite.
-              </div>
             </div>
           </div>
 
           <div class="card reveal">
             <div class="cardPad">
               <h3 style="margin:0 0 8px">Скрим-форма (прямо на странице)</h3>
-              <p style="margin:0 0 12px; color:var(--muted); font-weight:650">
-                Это демонстрация. Можно подключить к Google Forms / Telegram bot позже.
-              </p>
 
               <form id="scrimForm">
                 <div style="display:grid; gap:10px">
