--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                 <div class="bar"><i style="--w:58%"></i></div>
               </div>
               <div>
-                <div class="barRow"><span>Мемы</span><span>100%</span></div>
+                <div class="barRow"><span>Провал</span><span>100%</span></div>
                 <div class="bar"><i style="--w:100%"></i></div>
               </div>
               <div>
@@ -781,7 +781,6 @@
         <div class="sectionTitle reveal">
           <div>
             <h2>Состав</h2>
-            <p>У тебя будет 5 отдельных фото — просто замени пути к картинкам ниже.</p>
           </div>
           <div class="kicker"><span class="dot"></span> “мы как 5 пальцев” • иногда в разные стороны</div>
         </div>
